--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "multer": "^1.3.0",
+    "mysql": "^2.16.0",
     "mysql2": "^1.5.1",
     "node-cron": "^1.2.1",
     "nodemailer": "^4.4.1",
@@ -31,7 +32,8 @@
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.7",
-    "sequelize-cli": "^4.1.1"
+    "sequelize-cli": "^4.1.1",
+    "watch": "^1.0.2"
   },
   "repository": {
     "type": "git",
