--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
+    "password": "password",
     "database": "upDown",
     "host": "localhost",
     "dialect": "mysql"
